src/components/app/app.css
body {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  max-width: 60%;
  font-family: Arial, Helvetica, sans-serif;
  color: whitesmoke;
  background-color: black;
}

li {
  list-style-type: none;
}

a {
  text-decoration: none;  
  color: whitesmoke0;
}
a:hover {
  font-weight: bold;
}

a:visited {
  color: whitesmoke;
}

